--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,12 +28,13 @@
 .nav-link {
   color: #343a40;
 }
-
+.full-vh {
+  height: 100vh;
+}
 .nav-item .active{
   font-weight: 400;
 }
 .section {
-  height: 100vh;
   margin: 0;
   padding: 100px 0 0 0;
   text-align: center;
@@ -88,6 +89,10 @@
 @media (max-width: 575px){
   html {
     font-size: 10px;
+  }
+
+  .section__hero {
+    background-position: calc(50% - 50px) 50%;
   }
 }
 @media screen and (min-width:320px) and (max-width:767px) and (orientation:landscape) {
