--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,6 +23,7 @@
 .navbar {
   box-shadow: 0 5px 5px -5px rgba(0,0,0,.5);
   -webkit-box-shadow: 0 5px 5px -5px rgba(0,0,0,.5);
+  opacity: 0.2;
 
 }
 .nav-link {
