changed app.about to app.home & added new app.about section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,7 +58,7 @@
 .blast{
   display: inline-block;
 }
-#about .blast, #about p {
+#home .blast, #about p {
   opacity: 0;
   display: inline-block;
   -webkit-transition: all 0.3s ease-out;
