--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,10 @@
     }
 }
 
+* {
+    border-radius: 0 !important;
+}
+
 canvas {
     z-index: 0;
     position: absolute;
@@ -27,6 +31,9 @@ canvas {
     left: 0;
 }
 
+label {
+    opacity: 0.8;
+}
 span {
     display: inline-block;
 }
@@ -54,6 +61,7 @@ span {
 .hero__arrow-container {
     position: absolute;
     bottom: 3rem;
+    animation-delay: 2s;
 }
 .hero__arrow-icon {
     height: calc(4vw + 20px);
@@ -61,9 +69,12 @@ span {
 }
 
 .contact-form__container {
-    background-color: #f8f9fa;
+    padding-top: 3rem;
 }
 
+.card {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
 .navbar {
     box-shadow: 0 5px 5px -5px rgba(0, 0, 0, .5);
     -webkit-box-shadow: 0 5px 5px -5px rgba(0, 0, 0, .5);
